z-index bug for navbar toggle button fixed

--- a/frontend/src/components/sidebar/Sidebar.css
+++ b/frontend/src/components/sidebar/Sidebar.css
@@ -57,7 +57,7 @@ aside {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 9999;
   transition: 0.3s;
   font-size: 1rem;
 }
